samples/_failures_safe/1760960880_d2e22a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_9e939b8a.c: In function ‘main’:
./samples/SAFE/__tmp_9e939b8a.c:206:5: error: expected declaration or statement at end of input
  206 |     int token_count = tokenize(input, tokens, MAX_TOKENS);
      |     ^~~
